fix(styles): switch alignment

--- a/packages/styles/src/components/switch.scss
+++ b/packages/styles/src/components/switch.scss
@@ -31,6 +31,7 @@ $switch-handle-icon: url("data:image/svg+xml,<svg viewBox='0 0 16 16' xmlns='htt
     align-items: center;
     height: tokens.get('switch-element-height');
     width: tokens.get('switch-element-width');
+    margin-block: tokens.get('switch-icon-padding-container');
     border: tokens.get('switch-border-width') tokens.get('switch-border-style-default')
       tokens.get('switch-element-enabled-stroke');
     border-radius: tokens.get('switch-border-radius-round');
@@ -189,7 +190,7 @@ $switch-handle-icon: url("data:image/svg+xml,<svg viewBox='0 0 16 16' xmlns='htt
     }
 
     &:checked::before {
-      background-color: tokens.get('switch-element-hover-bg');
+      background-color: tokens.get('switch-icon-hover');
     }
 
     @include utility-mx.high-contrast-mode {
